WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244781
AX: AccessibilityObject::replacedNodeNeedsCharacter should not assume it can get an AXObjectCache from the replaced node
https://bugs.webkit.org/show_bug.cgi?id=244781
Summary
AX: AccessibilityObject::replacedNodeNeedsCharacter should not assume it can ...
Tyler Wilcock
Reported
2022-09-04 12:26:09 PDT
AccessibilityObject::replacedNodeNeedsCharacter should not assume it can get a AXObjectCache from the replace node
Attachments
Patch
(1.83 KB, patch)
2022-09-04 12:30 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2022-09-04 12:39 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2022-09-04 12:40 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-04 12:26:20 PDT
<
rdar://problem/99549280
>
Tyler Wilcock
Comment 2
2022-09-04 12:26:29 PDT
rdar://99369899
Tyler Wilcock
Comment 3
2022-09-04 12:30:11 PDT
Created
attachment 462126
[details]
Patch
Tyler Wilcock
Comment 4
2022-09-04 12:39:05 PDT
Created
attachment 462127
[details]
Patch
Tyler Wilcock
Comment 5
2022-09-04 12:40:38 PDT
Created
attachment 462130
[details]
Patch
EWS
Comment 6
2022-09-04 16:37:19 PDT
Committed
254152@main
(11414e0bbcfb): <
https://commits.webkit.org/254152@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462130
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug