Cherry-pick 11414e0bbcfb. rdar://problem/99369899

AX: AccessibilityObject::replacedNodeNeedsCharacter should not assume it can get an AXObjectCache from the replaced node
    https://bugs.webkit.org/show_bug.cgi?id=244781
    rdar://99369899

    Reviewed by Chris Fleizach.

    AccessibilityObject::replacedNodeNeedsCharacter erroneously assumes it
    can get a non-null cache from Document::axObjectCache(), but in reality
    there are several ways this method can return a nullptr -- for example,
    if the document doesn't have a living render tree.

    With this patch, we null check the cache returned from Document::axObjectCache()
    before trying to use it.

    * Source/WebCore/accessibility/AccessibilityObject.cpp:
    (WebCore::AccessibilityObject::replacedNodeNeedsCharacter):

    Canonical link: https://commits.webkit.org/254152@main

Canonical link: https://commits.webkit.org/252432.363@safari-7614-branch